Fixe the figure caption alignment problems such that its is also controled by the style.salign flag

--- a/styles/nitrile-preview.less
+++ b/styles/nitrile-preview.less
@@ -50,12 +50,8 @@
     }
     .FIGCAPTION {
       text-indent: initial;
-      text-align: left;
       margin-top: 0;
       margin-bottom: 0.5em;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
       line-height: 1;
       white-space: normal;
     }
@@ -269,12 +265,8 @@
     }
     .FIGCAPTION {
       text-indent: initial;
-      text-align: left;
       margin-top: 0;
       margin-bottom: 0.5em;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
       line-height: 1;
       white-space: normal;
     }
@@ -463,12 +455,8 @@
     }
     .FIGCAPTION {
       text-indent: initial;
-      text-align: left;
       margin-top: 0;
       margin-bottom: 0.5em;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
       line-height: 1;
       white-space: normal;
     }
